--- a/style.css
+++ b/style.css
@@ -30,9 +30,10 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
-    max-width: 85vw;
+    max-width: 65vw;
     background-color: rgb(209, 223, 239);
     border: 2px solid white;
+    transition: all 0.5s ease-in-out;
 }
 
 .modal-wrapper{
